Fixed signup email subdomain view and shifted webkit autofill

--- a/public/modules/users/css/users.css
+++ b/public/modules/users/css/users.css
@@ -1,7 +1,3 @@
-input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0 30px white inset !important;
-}
-
 section.auth {
 	padding: 40px 0;
 	position: absolute;
